Fix flickering hover tooltip on Chrome.

--- a/CSS/styles.scss
+++ b/CSS/styles.scss
@@ -166,7 +166,7 @@ h2 {
     margin: 0;
     padding-left: 10px;
     opacity: 0;
-    transition: opacity 0.3s ease-in-out;
+    transition: opacity 0.3s;
 
     @media screen and (max-width: 768px) {
         opacity: 0.7;
@@ -182,10 +182,10 @@ h2 {
         align-items: center;
         border: 1px solid transparent;
         border-radius: 50%;
-        transition: 0.25s ease-in-out;
+        transition: 0.3s;
 
         &:hover {
-            border-color: lightgray;
+            border: 1px solid lightgray;
             box-shadow: 0px 0px 5px 1px lightgray;
         }
     }
@@ -526,21 +526,6 @@ h2 {
     }
 }
 
-/* The navigation menu links */
-// .sidenav a {
-//     padding: 8px 8px 8px 32px;
-//     text-decoration: none;
-//     font-size: 25px;
-//     color: #818181;
-//     display: block;
-//     transition: 0.3s;
-// }
-
-/* When you mouse over the navigation links, change their color */
-// .sidenav a:hover {
-//     color: #f1f1f1;
-// }
-
 /* Position and style the close button (top right corner) */
 .sidenav .closebtn {
     position: absolute;
@@ -716,12 +701,8 @@ h2 {
     margin: 1.2rem 1.6rem;
     color: #202124;
 
-    a {
-        text-decoration: none;
-        color: #202124;
-        &:hover {
-            text-decoration: underline;
-        }
+    a:hover {
+        text-decoration: underline;
     }
 
     h4 {
@@ -915,13 +896,12 @@ h2 {
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
         Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
     opacity: 0;
-    transition: opacity 0.3s;
     white-space: nowrap;
     font-weight: 700;
 }
 
 .tooltip:hover .tooltiptext {
-    opacity: 1;
+    opacity: 0.7;
 }
 
 .tooltip .tooltiptext::after {
